# tubby

./: README.md
backend/: README.md  app.py  pyproject.toml
frontend/: .gitignore  README.md  index.html  package-lock.json  vite.config.js
frontend/src/: App.vue  style.css
